# kv

./: .gitignore  00-RELEASENOTES  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  DEVELOPMENT_GUIDE.md  Dockerfile  GOVERNANCE.md  LLM.md  MAINTAINERS.md  README.md  SECURITY.md  kv.conf  runtest  runtest-cluster  runtest-moduleapi  runtest-sentinel  sentinel.conf  valkey.conf
.config/: typos.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml  test-failure.md
.github/benchmark_configs/: benchmark-config-arm.json  benchmark-config-x86.json  pr_benchmark.json
.github/instructions/: core-engine.instructions.md  integration-tests.instructions.md  utils.instructions.md
.github/workflows/: benchmark-on-label.yml  benchmark-release.yml  ci.yml  clang-format.yml  codecov.yml  codeql-analysis.yml  coverity.yml  daily.yml  deploy.yml  external.yml  reply-schemas-linter.yml  spell-check.yml  trigger-build-release.yml  weekly.yml
cmake/Modules/: KVSetup.cmake  Packaging.cmake  SourceFiles.cmake  Utils.cmake  ValkeySetup.cmake
modules/zap/: Makefile  zap_module.c  zap_protocol.h
src/: .gitignore  CMakeLists.txt  Makefile  acl.c  allocator_defrag.c  allocator_defrag.h  anet.c  anet.h  aof.c  asciilogo.h  bio.c  bio.h  bitops.c  blocked.c  call_reply.c  call_reply.h  childinfo.c  cli_commands.h  cli_common.c  cli_common.h  cluster.c  cluster.h  cluster_legacy.c  cluster_legacy.h  cluster_migrateslots.c  cluster_migrateslots.h  cluster_slot_stats.c  cluster_slot_stats.h  commandlog.c  commands.def  commands.h  config.c  config.h  connection.h  connhelpers.h  crcspeed.c  db.c  debug.c  defrag.c  dict.c  (+104 more)
src/commands/: README.md  acl-getuser.json  acl-setuser.json  blmove.json  brpoplpush.json  client-caching.json  client-capa.json  client-getname.json  client-getredir.json  client-id.json  client-kill.json  client-list.json  client-no-evict.json  client-no-touch.json  client-reply.json  client-setinfo.json  client-setname.json  cluster-cancelslotmigrations.json  cluster-count-failure-reports.json  cluster-flushslot.json  cluster-getslotmigrations.json  cluster-keyslot.json  cluster-migrateslots.json  cluster-replicate.json  cluster-shards.json  cluster-syncslots.json  commandlog-get.json  commandlog-len.json  commandlog-reset.json  copy.json  delifeq.json  flushall.json  georadius.json  georadius_ro.json  georadiusbymember.json  georadiusbymember_ro.json  geosearch.json  geosearchstore.json  getset.json  hexpire.json  (+40 more)
src/lua/: debug_lua.c  engine_lua.c  engine_lua.h  function_lua.c  function_lua.h  script_lua.c  script_lua.h
src/modules/: CMakeLists.txt  Makefile  helloacl.c  helloblock.c  hellocluster.c  hellodict.c  hellohook.c  hellotimer.c  hellotype.c  helloworld.c
src/modules/lua/: CMakeLists.txt  Makefile  README.md  debug_lua.c  debug_lua.h  engine_lua.c  engine_structs.h  function_lua.c  function_lua.h  list.c  script_lua.c  script_lua.h
src/trace/: README.md  trace.c  trace.h  trace_aof.c  trace_aof.h  trace_bgsave.c  trace_bgsave.h  trace_cluster.c  trace_cluster.h  trace_commands.c  trace_commands.h  trace_db.c  trace_db.h  trace_rdb.c  trace_rdb.h  trace_server.c  trace_server.h
src/unit/: CMakeLists.txt  README.md  test_bitops.c  test_crc64.c  test_crc64combine.c  test_entry.c  test_fifo.c  test_files.h  test_hashtable.c  test_help.h  test_kv_strtod.c  test_kvstore.c  test_listpack.c  test_main.c  test_mutexqueue.c  test_networking.c  test_object.c  test_quicklist.c  test_rax.c  test_sds.c  test_sha256.c  test_util.c  test_vector.c  test_vset.c  test_ziplist.c  test_zmalloc.c
tests/: README.md  instances.tcl  test_helper.tcl
tests/assets/: default.conf  minimal-cluster-legacy.conf  minimal-cluster.conf  minimal.conf  test_cli_hint_suite.txt
tests/cluster/: cluster.tcl  run.tcl
tests/helpers/: bg_block_op.tcl  bg_complex_data.tcl  gen_write_load.tcl
tests/integration/: aof-multi-part.tcl  aof-race.tcl  aof.tcl  corrupt-dump-fuzzer.tcl  cross-version-replication.tcl  dismiss-mem.tcl  dual-channel-replication.tcl  failover.tcl  kv-benchmark.tcl  kv-check-rdb.tcl  kv-cli.tcl  logging.tcl  psync2-pingoff.tcl  psync2-reg.tcl  rdb.tcl  replica-redirect.tcl  replication-4.tcl  replication-buffer.tcl  replication.tcl  scan-family-consistency.tcl  shutdown.tcl  valkey-benchmark.tcl  valkey-check-rdb.tcl  valkey-cli.tcl
tests/modules/: CMakeLists.txt  Makefile  aclcheck.c  auth.c  basics.c  block_keyspace_notification.c  blockedclient.c  blockonbackground.c  blockonkeys.c  cluster.c  cmdintrospection.c  commandfilter.c  crash.c  datatype.c  datatype2.c  defragtest.c  eventloop.c  fork.c  getchannels.c  getkeys.c  hash.c  hash_stringref.c  helloscripting.c  hooks.c  infotest.c  keyspace_events.c  keyspecs.c  list.c  mallocsize.c  misc.c  moduleauthtwo.c  moduleconfigs.c  moduleconfigstwo.c  moduleparameter.c  postnotifications.c  propagate.c  publish.c  rdbloadsave.c  reply.c  scan.c  (+8 more)
tests/rdma/: CMakeLists.txt  Makefile  rdma-test.c  rdma_env.py  run.py
tests/sentinel/: run.tcl
tests/support/: aofmanifest.tcl  benchmark.tcl  cli.tcl  cluster.tcl  cluster_util.tcl  kv.tcl  response_transformers.tcl  server.tcl  set_executable_path.tcl  test.tcl  util.tcl
tests/unit/: acl-v2.tcl  acl.tcl  auth.tcl  client-eviction.tcl  commandlog.tcl  dump.tcl  expire.tcl  functions.tcl  fuzzer.tcl  geo.tcl  hashexpire.tcl  hyperloglog.tcl  info-command.tcl  info.tcl  introspection.tcl  io-threads.tcl  limits.tcl  maxmemory.tcl  memefficiency.tcl  multi.tcl  networking.tcl  obuf-limits.tcl  other.tcl  pause.tcl  protocol.tcl  pubsub.tcl  pubsubshard.tcl  querybuf.tcl  replybufsize.tcl  scripting.tcl  shutdown.tcl  slowlog.tcl  tls.tcl  tracking.tcl  wait.tcl
utils/: gen-test-certs.sh  generate-command-code.py  generate-commands-json.py  generate-module-api-doc.rb  install_server.sh  kv_init_script  kv_init_script.tpl  req-res-log-validator.py  speed-regression.tcl  systemd-kv_multiple_servers@.service  systemd-kv_server.service  whatisdoing.sh
utils/create-cluster/: README  create-cluster
utils/lru/: README
(+85 files in other folders)
